--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -75,25 +75,25 @@
 								Often time we expects other people to be a certain way. We expects that everyone should be nice to one another, be culturally correct, and do everything accordingly. But the truth is, it's never like that because each person is different. We are all brought up differently; and thus think differently, wise or unwise. And as result, stereotype threat from others is something beyond one's control.
 							</P>
 							<p>
-								So don't expect others to not, or assume they should not, give you the stereotype threat because you can't. And when they do, and they will do, don't expect them to not. We all have our reasons of why we do certain things. So starts expecting from ourself to do some understanding on our part, and stop expecting others to revolve around you.
+								So don't expect others to not, or assume they should not, give you the stereotype threat because you can't. And when they do, and they will do, don't expect them to not. <span class="redcolor">We all have our reasons of why we do certain things. So starts expecting from ourself to do some understanding on our part, and stop expecting others to revolve around you.</span>
 							</p> 
 							<h4>2. It's never a threat. It's a misunderstanding.</h4>
 							<p>
 								I think the word stereotype is neutral; however, the word "threat" is rather a negative word as if someone trying to hurt someone. And I believe stereotype threat are not really threat. They are merely generalization which has nothing to do with reality.
 							</p>
 							<p>
-								A great Theravada Buddhist monk named "Buddhadasa" once said, "If the insult is not true, then you have nothing to be angry about. However, if the insult is true, then you also don't have to be angry because it is true." So whichever way you see it, it's never a threat unless you allow it to be.
+								A great Theravada Buddhist monk named "Buddhadasa" once said, <span class="redcolor">"If the insult is not true, then you have nothing to be angry about. However, if the insult is true, then you also don't have to be angry because it is true."</span> So whichever way you see it, it's never a threat unless you allow it to be.
 							</p>
 							<h4>3. Truth and what people think is truth is completely exclusive from one another.</h4>
 							<p>
-								Don't let the fact mix with the fiction. People can think. Let them think. People will judge. Let them judge. People will badmouth you behind your back. Let them have it. But do any of those ever tells anything about who you really are?
+								<span class="redcolor">Don't let the fact mix with the fiction.</span> People can think. Let them think. People will judge. Let them judge. People will badmouth you behind your back. Let them have it. But do any of those ever tells anything about who you really are?
 							</p>
 							<p>
 								Of course not! These are just what people say. And what people say and who you are is completely different. People can say you are lazy. But if you know you work hard everday. Why bother?
 							</p>
 							<h4>Conclusion</h4>
 							<p>
-								Personally, I do not like the term "stereotype threat." It makes you feel as if someone is hurting another when they really are not. People is flawed by design and misunderstanding and stereotyping is just part of life. But what matters most in the end is to know yourself unbiased for who you really are. That way, one could find shelter in facts from the storm of fictions, truth from the what anyone thinks is truth, and ultimately, find peace amidst the uncertainty of life.
+								Personally, I do not like the term "stereotype threat." It makes you feel as if someone is hurting another when they really are not. People is flawed by design and misunderstanding and stereotyping is just part of life. But what matters most in the end is to know yourself unbiased for who you really are. That way, one could find shelter in facts from the storm of fictions, truth from the thoughts of truth, and perhaps, find peace and stillness amidst the ups and downs life.
 							</p>
 						</article>
 					</div>
