--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -23,7 +23,7 @@
 			</nav>
 
 			<aside class="left-off-canvas-menu">
-				<ul class="off-canvas-list">
+					<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
 					<li><label>Projects</label></li>
 					<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
@@ -41,8 +41,10 @@
 					<li><a href="week4_technical.html">What is Enumerable in Ruby?</a></li>
 					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><a href="week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
+					<li><a href="week5_technical.html">Class in Ruby, Simplified</a></li>
 					<li><a href="week6_technical.html">Variables Scope in Ruby</a></li>
 					<li><a href="week6_cultural.html">Stereotype Threat, Not!</a></li>
+					<li><a href="week7_technical.html">Hacking SQL</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
