--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 					<li><a href="blog-posts/week5_technical.html">Class in Ruby, Simplified</a></li>
 					<li><a href="blog-posts/week6_technical.html">Variables Scope in Ruby</a></li>
 					<li><a href="blog-posts/week6_cultural.html">Stereotype Threat, Not!</a></li>
+					<li><a href="blog-posts/week7_technical.html">Hacking SQL</a></li>
+					<li><a href="blog-posts/week7_cultural.html">The Way Out is In</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
