--- a/blog-posts/week7_cultural.html
+++ b/blog-posts/week7_cultural.html
@@ -60,7 +60,7 @@
 
 					<div class="large-9 columns" role="content">
 						<article>
-							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on August 13th, 2014</h6>
+							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on August 24th, 2014</h6>
 							<h4>When you think of the times in your life where you’ve been the happiest, the proudest, or the most satisfied, which of the following values come to mind?</h4>
 							<p>
 								Activism Adventure Ambition Autonomy Commitment Community Compassion Competence Confidence Coolness under fire Courage Creativity Credibility Decisiveness Effectiveness Efficiency Enthusiasm Environmentalism Excellence Fairness Faith Freedom  Growth Health Helping other people Helping society Honesty Hospitality Independence Inner harmony Insight Inspiration Integrity Intellectual Introspection Justice Knowledge Location Loyalty Meaningful work Mentorship Merit Money Movement Openness Peace Persistance Personal development Power and authority Privacy service Purity Quality Recognition Responsibility Self-knowledge Self-reliance Self-respect Serenity Sophistication Spirituality Stability Status Tranquility Truth Vibrancy Volunteering Wealth Will-power Wisdom
@@ -169,32 +169,32 @@
 							</p>
 							<h5> 2. Don't let it gets to you </h5><br>
 							<p>
-								What is required for this excercise is mindfulness in all activities.(This is mediation.) What this gives you is the ability to see yourself right at the moment when your emotions--worries, anger, frustration, dissapointment, jealousy, etcs--are taking over your reasons, when you start becoming subjective, and when you start taking things personally. And right at the moment when you see such feelings, you identify it and deal with it right on the spot. Emotions are like fire, the faster you deals with it the easier it is to smother. Otherwise, emotions undealt become a wildfire. If you hate this person, and you don't take care of it. You would ended up hating him/her more and more everyday. So longer you keep the fire the more it spreads and burns under your skin.
+								What is required for this excercise is mindfulness in all activities.(This is mediation.) What this gives you is the ability to see yourself right at the moment when your emotions--worries, anger, frustration, dissapointment, jealousy, etcs--are taking over your reasons, when you start becoming subjective, and when you start taking things personally. And right at the moment when you are knocked out of your usual stability, see such feelings, identify it and deal with it right on the spot. Emotions spread like fire, the faster you deals with it the easier it becomes to put it out. Otherwise, emotions undealt could easily become a wildfire which could eventually take over your life. For example, if you hate a person; and you don't take care of it. Everyday you would end up hating him/her more and more. So the longer you keep holdin on to fire the more it spreads and burns under your skin. So learn to be quick to identify and put out your fire.
 							</p>
 							<h5> 3. Meditation </h5><br>
 							<p>
-								Mediation is not a practice simply to calms you down. It stops you from being caught up in the whirlwind of emotions of life and allow you the insight into the problem at hand--especially spiritual ones. (If you are interested more about mediation feel free to contact. This is my passion!)
+								Mediation is not a practice simply to calms you down. It stops you from being caught up in the whirlwind of emotions in life and allow you the insight into the problem at hand from a more objective point of view. Some might said meditation is like a life reset button. (If you are interested more about mediation feel free to contact from the links to your right. This is my passion!)
 							</p>
 							<h5> 4. Associate to Wise People </h5><br>
 							<p>
-								This might sounds really straightforward; but it because it actually is. Who are the wise people you ask? Well, this is how I personally define them: They are those that know how to deal with themselves well. They make you feel at ease when you around them. They seems to somehow be happy, calm and composed at all time in all situation. They are down to earth. They are objectives and values truth from their their own version of truth. 
+								This might sounds really straightforward; but it because it actually is. Who are the wise people you ask? Well, this is how I personally define them: They are those that know how to deal and overcome with themselves well. They take themselves lightly. They make you feel at ease when you around them. They seems to somehow be happy, calm and composed at all time in all situation. They are down to earth. They are intellectual and knowledgable. They are objectives and values truth over their their own version of truth. 
 							</p>
 							<p>Here is a list of my personal "wise people":</p>
-							<li>Buddha</li>
+							<li>Buddha!</li>
 							<li>Aahjn Chah
 							<a href="http://www.youtube.com/results?search_query=ajahn+chah">Link to Youtube</a></li>
 							<li>Master Thich Nhat Hanh
 							<a href="http://www.youtube.com/results?search_query=thich+nhat+hanh">Link to Youtube</a></li>
 							<li>Aahjn Buddhadasa
 							<a href="http://www.suanmokkh.org/archive/">Link to Resources</a></li>
-							<p>They have always been there for me. But you should test them out yourself.</p>
+							<p>They have always been there for me and guide me through life! Nevertheless, you should test them out yourself.</p>
 						</article>
 					</div>
 
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow and like me from the icons below</p>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, or contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
