--- a/blog-posts/week7_cultural.html
+++ b/blog-posts/week7_cultural.html
@@ -68,7 +68,7 @@
 							<h4>If I have to pick one value out of the list above, what would it be?</h4>
 							<p>
 								<span class="redcolor" style = "font-size: 1.2em;">Integrity:</span>
-								I personally feel that the most important value towards happiness in a person is integrity both toward oneself as well as integrity toward others. Personally, I feel the two are slightly different in a sense that having integrity toward others is what you uphold to others when no one knows what you do, while integrity towards oneself is what one uphold for oneself when others are or not looking. 
+								I personally feel that the most important value towards happiness in a person is integrity both toward oneself as well as integrity toward others. I feel the two are slightly different in a sense that having integrity toward others is what you uphold to others when no one knows what you do, while integrity towards oneself is what one uphold for oneself when others are or not looking. 
 							</p>
 							<h4>In a degree of 1 to 5, 1 being completely disagree and 5 completely agree, do I try to live up to these values?</h4>
 							<div class="row">
@@ -153,29 +153,29 @@
 
 							<h4>How do you feel when you think about your values?</h4>
 							<p>
-								After I have listed these values out and asked whether or not I have been living up to these values. I feel there are a lot of rooms for improvement for values which I uphold yet doesn't conciously or intentionally implement them enough to create a habit. So I feel I should actually try to structurally and conciously implement them in my daily life more often, especially ones which I values the most yet doesn't live up to it.
+								After I have listed these values out and asked whether or not I have been living up to these values. I feel there are a lot of rooms for improvement for values which I uphold yet doesn't conciously, intentionally, or consistently implement them enough to create a habit. So I feel I should actually try to structurally and conciously implement them in my daily life more often, especially ones which I values the most yet doesn't live up to it.
 							</p>
 							<h4>Do you think it can help you mediate stereotype threat if you recognize you feel it?</h4>
 							<p>
-								Definitely. I have a personally motto which helps to bring out the importance of mindfulness. And it goes like this: "You can't fix what you can't see." So the first step toward any personal growths start from recognizing what needs improvement.
+								Definitely. I have a personal motto which helps to bring out the importance of mindfulness. And it goes like this: "You can't fix what you can't see." So the first step toward any personal growths start from recognizing what needs improvement.
 							</p>
 							<h4>Can you think of any other exercises you can use to help you when you are feeling down?</h4>
 							<p>
 								Personally, there are four protocols which I use when I am feeling down.
 							</p>
-							<h5> 1. Self-reflection </h5><br>
+							<h5> 1. Self-reflection </h5>
 							<p>
 							One famous organic farmer and environmentalist in Thailand, named "Jo Jan Dai," once said a very simple philosophy that <span class="redcolor">"If life is difficult for you. It means that you are living it wrong." </span> So every time I start to feel down, or that somehow life is amiss. I know right away that I am living it wrong. And what I need to do is some rethinking and refactoring of life. This might includes some time alone, not as a mean to escape, but as a mean to be with oneself to rethink itself.
 							</p>
-							<h5> 2. Don't let it gets to you </h5><br>
+							<h5> 2. Don't let it gets to you </h5>
 							<p>
 								What is required for this excercise is mindfulness in all activities.(This is mediation.) What this gives you is the ability to see yourself right at the moment when your emotions--worries, anger, frustration, dissapointment, jealousy, etcs--are taking over your reasons, when you start becoming subjective, and when you start taking things personally. And right at the moment when you are knocked out of your usual stability, see such feelings, identify it and deal with it right on the spot. Emotions spread like fire, the faster you deals with it the easier it becomes to put it out. Otherwise, emotions undealt could easily become a wildfire which could eventually take over your life. For example, if you hate a person; and you don't take care of it. Everyday you would end up hating him/her more and more. So the longer you keep holdin on to fire the more it spreads and burns under your skin. So learn to be quick to identify and put out your fire.
 							</p>
-							<h5> 3. Meditation </h5><br>
+							<h5> 3. Meditation </h5>
 							<p>
 								Mediation is not a practice simply to calms you down. It stops you from being caught up in the whirlwind of emotions in life and allow you the insight into the problem at hand from a more objective point of view. Some might said meditation is like a life reset button. (If you are interested more about mediation feel free to contact from the links to your right. This is my passion!)
 							</p>
-							<h5> 4. Associate to Wise People </h5><br>
+							<h5> 4. Associate to Wise People </h5>
 							<p>
 								This might sounds really straightforward; but it because it actually is. Who are the wise people you ask? Well, this is how I personally define them: They are those that know how to deal and overcome with themselves well. They take themselves lightly. They make you feel at ease when you around them. They seems to somehow be happy, calm and composed at all time in all situation. They are down to earth. They are intellectual and knowledgable. They are objectives and values truth over their their own version of truth. 
 							</p>
@@ -186,7 +186,7 @@
 							<li>Master Thich Nhat Hanh
 							<a href="http://www.youtube.com/results?search_query=thich+nhat+hanh">Link to Youtube</a></li>
 							<li>Aahjn Buddhadasa
-							<a href="http://www.suanmokkh.org/archive/">Link to Resources</a></li>
+							<a href="http://www.suanmokkh.org/archive/">Link to Resources</a></li><br>
 							<p>They have always been there for me and guide me through life! Nevertheless, you should test them out yourself.</p>
 						</article>
 					</div>
