--- a/blog-posts/week8_technical.html
+++ b/blog-posts/week8_technical.html
@@ -47,6 +47,7 @@
 					<li><a href="week7_technical.html">Hacking SQL</a></li>
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
+					<li><a href="week8_cultural.html">How to Live with a Broken Relationship</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
