--- a/blog-posts/week8_cultural.html
+++ b/blog-posts/week8_cultural.html
@@ -85,7 +85,7 @@
 								 When you are angry or dislike someone, your emotions are telling you to do nasty and ugly things to this person. And by giving in to that unwholesome desire, suddenly, feel yourself happy to harm others. And this eventually come out through thoughts, words, and actions. You might feel the satisfaction of hurting the person you hate. But in the long run, I can guarantee you, your actions will only comes back and haunt you. And all that remains is guilt, shame, hurtful feelings, and dissapoint in oneself. 
 							</p>
 							<p>
-								I have move on and forgiven myself but the process hasn't been easy nor quick. Although our relationship is broken. I accept it since life is never like how you wanted. And the only thing that one could do is keep our heads up, learn your lesson, and move on. I hope by sharing my experience, the reader will become more beware of his or her own actions when conflict actually occur. And remember to never made the same mistake I made.  
+								I have moved on and forgiven myself but the process hasn't been easy nor quick. Although our relationship is broken. I accept it. Life is never like how you wanted. You could do your best to live life, but in the end life is just life. And the only thing that one could do is keep our heads up, learn your lesson, and move on. I hope by sharing my experience, the reader will become more beware of his or her own actions when conflict actually occur. And remember to never made the same mistake I made.  
 							</p>
 							<p>
 								Have a good day!
