--- a/blog-posts/week8_cultural.html
+++ b/blog-posts/week8_cultural.html
@@ -63,6 +63,7 @@
 					<div class="large-9 columns" role="content">
 						<article>
 							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on September 4th, 2014</h6>
+							<h4>My Worst Conflict</h4>
 							<p>
 								The worst conflict I ever had in my life is with my best friend when I was in high school. I was still very young and naive. I didn't know much about myself or how the society functions. And so I was prone to making huge mistake in life. And I did.
 							</p>
@@ -72,18 +73,21 @@
 							<p>
 								I could tell you whole-heartedly that none of these methods made the conflict better. It only made the situation much worse. From complete trust, my best friend and I start completely mistrusting each other. We start competing with one another on all subjects. We start bad mouthing each other in front and behind each other's back. It was hard just for us to be in the same room. It was a total mess. 
 							</p>
+							<h4>The Aftermath</h4>
 							<p>
 								 In retrospec, it saddens me to abandon such a meaningful relationship and all the memories we had. But this is how it is. And since the way we handle this situation was not very skillful, our relationship is simply broken. Even though we say "hi" to one another when we met, but deep down we kind of stop being friend. The vibe and the frequency that we used to have is just all wrong. It has been years since we had this conflict, yet even now we couldn't comfortably look into each other eyes every time we met.
 							</p>
 							<p>
 								If I could go back in time with the knowledge I have now, I would not have gone to any of poles. I would try my best to keep the relationship going and left out all the ugly and nasty thoughts, words, and actions I have toward my best friend. It was very childish and not beneficial to any of us. Nevertheless, there is nothing I could do to change the past and even if I go back in time, I still would make the same mistake. I often wish I could patch back our relationship but sometimes when something is broken, it could never be put back. And I understood, accept, and learn a lot through this hard lesson. 
 							</p>
+							<h4>Lesson Learned</h4>
 							<p>
 								There is much that I learn from this emotional experience. How to live with a broken relationship, how and why the relationship descended from height to depth, or how to prevent myself from getting into such conflict. However, if I could share one lesson which I feel to be most important, then this is it: <span class="redcolor">Never purposely intent to hurt someone regardless of how angry you are or what someone did or did not do to you.</span>
 							</p>
 							<p>
 								 When you are angry or dislike someone, your emotions are telling you to do nasty and ugly things to this person. And by giving in to that unwholesome desire, suddenly, feel yourself happy to harm others. And this eventually come out through thoughts, words, and actions. You might feel the satisfaction of hurting the person you hate. But in the long run, I can guarantee you, your actions will only comes back and haunt you. And all that remain are guilt, shame, hurtful feelings, and dissapoint in oneself. 
 							</p>
+							<h4>Coming to Term with Oneself</h4>
 							<p>
 								I have moved on and forgiven myself but the process hasn't been easy nor quick. Although our relationship is broken. I accept it. Life is never like how you wanted. You could do your best to live life, but in the end life is just life. And the only thing that one could do is keep our heads up, learn your lesson, and move on. I hope by sharing my experience, the reader will become more aware of his or her own actions when conflict actually occurs. And remember to never made the same mistake I made.  
 							</p>
