--- a/blog-posts/week8_cultural.html
+++ b/blog-posts/week8_cultural.html
@@ -47,7 +47,7 @@
 					<li><a href="week7_technical.html">Hacking SQL</a></li>
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
-					<li><a href="week8_cultural.html">How to Live with a Broken Relationship</a></li>
+					<li><a href="week8_cultural.html">How to Live with Broken Relationship</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -56,7 +56,7 @@
 				<div class="row">
 					<div class="large-12 columns">
 					</div>
-					<h2 id="atitle">How to Live with a Broken Relationship</h2>
+					<h2 id="atitle">How to Live with Broken Relationship</h2>
 				</div>
 				<div class="row">
 
