--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="gps1.1/gps1.1.html">GPS1.1</a></li>
+					<li><a href="blog-posts/unit3_cheatsheet.html">Git Cheatsheet</a></li>
 					<li><label>Blogs</label></li>
 					<li><a href="blog-posts/week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="blog-posts/week1_cultural.html">Take Charge of Your Edu</a></li>
