--- a/blog-posts/week7_technical.html
+++ b/blog-posts/week7_technical.html
@@ -46,6 +46,7 @@
 					<li><a href="week6_cultural.html">Stereotype Threat, Not!</a></li>
 					<li><a href="week7_technical.html">Hacking SQL</a></li>
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
+					<li><a href="week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -126,7 +127,7 @@
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, and contact me from the icons below</p>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philosopher. Follow, like, and contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
