--- a/blog-posts/week8_cultural.html
+++ b/blog-posts/week8_cultural.html
@@ -32,6 +32,7 @@
 					<li><a href="../unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
+					<li><a href="unit3_cheatsheet.html">Git Cheatsheet</a>
 					<li><label>Blogs</label></li>
 					<li><a href="week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
@@ -48,6 +49,7 @@
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
 					<li><a href="week8_cultural.html">How to Live with Broken Relationship</a></li>
+					<li><a href="week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -100,7 +102,7 @@
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, or contact me from the icons below</p>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philosopher. Follow, like, or contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
