--- a/blog-posts/week8_technical.html
+++ b/blog-posts/week8_technical.html
@@ -48,6 +48,7 @@
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
 					<li><a href="week8_cultural.html">How to Live with Broken Relationship</a></li>
+					<li><a href="week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -120,7 +121,7 @@ This type of algorithm is described as <span class="redcolor">O(log N)</span>. T
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, and contact me from the icons below</p>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philosopher. Follow, like, and contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
