--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li><a href="blog-posts/week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="blog-posts/week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
 					<li><a href="blog-posts/week8_cultural.html">How to Live with Broken Relationship</a></li>
+					<li><a href="blog-posts/week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
